--- a/datepicker/index.html
+++ b/datepicker/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>DatePicker</title>
 </head>
 <body>
   <div class="ui-datepicker-wrapper">
     <div class="ui-datepicker-header">
-      <a href="#" class="ui-datrepicker-btn ui-datepicker-prev-btn">&lt;</a>
-      <a href="#" class="ui-datrepicker-btn ui-datepicker-next-btn">&gt;</a>
+      <a href="#" class="ui-datepicker-btn ui-datepicker-prev-btn">&lt;</a>
+      <a href="#" class="ui-datepicker-btn ui-datepicker-next-btn">&gt;</a>
       <span class="ui-datepicker-curr-month">2022-2</span>
     </div>
     <div class="ui-datepicker-body">
