获取日历数据

--- a/datepicker/index.html
+++ b/datepicker/index.html
@@ -77,5 +77,10 @@
       </table>
     </div>
   </div>
+  <script src="./date.js"></script>
+  <script>
+   var monthData = datepicker.getMonthData()
+   console.log(monthData)
+  </script>
 </body>
 </html>
