--- a/datepicker/index.html
+++ b/datepicker/index.html
@@ -95,7 +95,7 @@
   <script src="./date.js"></script>
   <script src="./main.js"></script>
   <script>
-    datepicker.init(document.querySelector('.datepicker'))
+    datepicker.init('.datepicker')
   </script>
 </body>
 </html>
